(include_subdirs unqualified)

(rule
 (targets c_flags.sexp)
  (action
 (with-stdout-to c_flags.sexp
    (system "echo -n '('; pkg-config --cflags sdl2; echo -n ')'"))))

(rule
 (targets c_library.sexp)
  (action
 (with-stdout-to c_library.sexp
    (system "echo -n '('; pkg-config --libs sdl2; echo -n ')'"))))

(library
 (public_name osdl2)
 (name osdl2)
 (modes native)
 (install_c_headers
   audio_stub
   blendmode_stub
   keycode_stub
   pixel_stub
   textureAccess_stub
   point_stub
   rect_stub
   render_stub
   rwops_stub
   surface_stub
   texture_stub
   video_stub)
 (foreign_stubs
  (language c)
  (names
    rect_stub
    textureAccess_stub
    pixel_stub
    hints_stub
    keycode_stub
    error_stub
    blendmode_stub
    surface_stub
    surface_ba_stub
    init_stub
    timer_stub
    events_stub
    version_stub
    texture_stub
    render_stub
    rwops_stub
    power_stub
    mouse_stub
    keyboard_stub
    audio_stub
    clipboard_stub
    cpuinfo_stub
    filesystem_stub
    joystick_stub
    video_stub
    platform_stub
    )
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags (:include c_library.sexp)))
