(include_subdirs unqualified)

(rule
 (targets c_flags.sexp)
 (action
  (with-stdout-to
   c_flags.sexp
   (system "echo -n '('; pkg-config --cflags sdl2 glew; echo -n ')'"))))

(rule
 (targets c_library.sexp)
 (action
  (with-stdout-to
   c_library.sexp
   (system "echo -n '('; pkg-config --libs sdl2 glew; echo -n ')'"))))

(library
 (public_name caml-sdl2)
 (name camlSDL2)
 (modes native)
 (public_headers
  (glob_files camlsdl2/*.h))
 (foreign_stubs
  (language c)
  (names
   rect_stub
   pixel_stub
   hints_stub
   keycode_stub
   error_stub
   blendmode_stub
   surface_stub
   init_stub
   timer_stub
   events_stub
   version_stub
   render_stub
   rwops_stub
   power_stub
   mouse_stub
   keyboard_stub
   audio_stub
   clipboard_stub
   cpuinfo_stub
   filesystem_stub
   joystick_stub
   video_stub
   platform_stub)
  (flags
   :standard
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library.sexp)))
